<?xml version="1.0"?>
<package>
  <name>crazyflie_tools</name>
  <version>0.0.1</version>
  <description>Tools for Crazyflie Nano Quadcopter from Bitcraze</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/crazyflie</url>
  <url type="bugtracker">https://github.com/whoenig/crazyflie_ros/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>crazyflie_cpp</build_depend>

  <run_depend>crazyflie_cpp</run_depend>

</package>
